# Shaan

./: .gitattributes  index.html  main.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
scrollView/: scrollView.html  scrollView.ts  worker.js
scrollViewGL/: scrollViewGL.html  scrollViewGL.ts
src/: main.ts  styles.css
src-tauri/: .taurignore  Cargo.toml  data.db  store.db  tauri.conf.json
src-tauri/src/: db.rs  main.rs
