[package]
name = "shann"
version = "1.0.0"
description = "A Tauri App"
authors = ["Eric Hao"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aivny/ShannMind"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "api-all" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = {version = "*", features = ["bundled"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
